# chrono-kit

./: .flake8  Decompositions.py  ETS(AAN).py  ETS(ANA).py  ETS(ANM).py  ETS(MNA) (1).py  ETS(MNA).py  ETS(MNM).py  LICENSE  README.md  dataloader.py  debug.ipynb  ets_man  ets_methods.py  init_methods_test.py  initialization_methods.py  metrics.py  model.py  plots.py  pyproject.toml  run_lint.sh  smoothing.py  state_space_models.py  test_models.ipynb
.github/workflows/: linting.yml
chronokit/: __init__.py
chronokit/arima/: __base_model.py  __init__.py  __initialization.py  _arima.py  _sarima.py  autocorrelations.py
chronokit/autocorrelation/: __init__.py  autocorrelations.py  autocorrelations_test.py
chronokit/base/: __init__.py  _initializers.py  _models.py  _smoothing_models.py
chronokit/decomposition/: __init__.py  _classical_decomposition.py  _mstl.py  _stl.py  decompositions.py
chronokit/exponential_smoothing/: ETS.py  ExponentialSmoothing.py  __base_model.py  __init__.py  __initialization.py  _ets.py  _initialization.py  _smoothing.py  model.py
chronokit/narx/: __init__.py  narx.py
chronokit/networks/: __init__.py  _generator.py  _narx.py
chronokit/nn/: __init__.py
chronokit/preprocessing/: __init__.py  _dataloader.py  _model_selection.py  autocorrelations.py  data_transforms.py
chronokit/utils/: __init__.py
datasets/: Dataset_Info.txt  GOOG.csv  Sunspots.csv  monthly_temp.csv
decomposition/: Decompositions.py  __init__.py  classical_decomposition.py  decompositions.py  stl_decomposition.py
examples/: ARIMA.ipynb  Decomposition.ipynb  NARX.ipynb  Smoothing.ipynb
exponential_smoothing/: ETS.py  ExponentialSmoothing.py  __init__.py  model.py  model_selection.py
exponential_smoothing/initialization/: __init__.py  ets_methods.py  initialization_methods.py  smoothing_methods.py
exponential_smoothing/models/: __init__.py  ets_models.py  smoothing.py
preprocessing/: __init__.py  data_transforms.py  dataloader.py
testing/: test.py
tests/arima/: test_autocorr.py
tests/decomposition/: test_classical.py  test_stl.py
tests/networks/: test_generator.py
tests/preprocessing/: test_transforms.py
utils/: __init__.py
(+28 files in other folders)
