[tool.poetry]
name = "chrono-kit"
version = "1.0.5"
description = "An open source python library for time series analysis and forecasting."
authors = ["ODTU YZT <odtuyzt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.0"
pandas = "^1.4.0"
scipy = "^1.4.1"
matplotlib = "^3.2.1"
torch = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/odtuyzt/chrono-kit"
