[tool.poetry]
name = "chrono-kit"
packages = [{ include = "./chronokit"}]
version = "1.2.1"
description = "An open source python library for time series analysis and forecasting."
authors = ["Hasan Emir Akın <h.emirakn@gmail.com>"]
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.0"
pandas = "^1.4.0"
scipy = "^1.10.1"
matplotlib = "^3.2.1"
torch = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/chrono-kit/chrono-kit"
